--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,13 @@
         android:theme="@style/Theme.CRUD34A"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateProductActivity"
+            android:name=".ui.activity.UpdateProductActivity"
             android:exported="false" />
         <activity
-            android:name=".AddProductActivity"
+            android:name=".ui.activity.AddProductActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
