--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
@@ -16,6 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CRUD34A"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.activity.NotificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.LightSensor"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.GyroSensorActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.activity.AccelerometerActivity"
             android:exported="false" />
